--- a/src/components/AudioPlayer/style.css
+++ b/src/components/AudioPlayer/style.css
@@ -9,15 +9,19 @@
   align-items: center;
   background-color: rgba(52, 0, 111, 0.753);
   border: 1px solid rgba(211, 206, 194, 0.5);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
-.top{
-    padding: 1rem 0 0 0;
-    border-top-left-radius: 3rem;
-    color: rgba(255, 255, 255, 0);
+.top {
+  padding: 1rem 0 0 0;
+  border-top-left-radius: 3rem;
+  color: rgba(255, 255, 255, 0);
 }
 
+.volume {
+  padding: 1rem 0 0 0;
+  color: rgb(145, 123, 76);
+}
 
 .bottom {
   padding-bottom: 10px;
@@ -30,7 +34,7 @@
 }
 
 .song__title {
-  margin: 0 0 ;
+  margin: 0 0;
   color: rgb(145, 123, 76);
   font-family: "Permanent Marker", cursive;
   font-weight: normal;
@@ -38,11 +42,11 @@
 }
 
 .song__title:hover {
-    color: rgba(172, 255, 47, 0.5);
+  color: rgba(172, 255, 47, 0.5);
 }
 
 .divider {
-    background-color: rgba(211, 206, 194, 0.5);
+  background-color: rgba(211, 206, 194, 0.5);
 }
 
 .song__artist {
@@ -68,11 +72,11 @@
 }
 
 .player__button {
-    width: fit-content;
-    margin: 0 0 15px 0;
-    background-color: transparent;
-    border: none;
-    color: rgba(232, 211, 162, 0.75);
+  width: fit-content;
+  margin: 0 0 15px 0;
+  background-color: transparent;
+  border: none;
+  color: rgba(232, 211, 162, 0.75);
 }
 
 .player__button:focus {
@@ -81,23 +85,22 @@
 
 .player__button:hover {
   cursor: pointer;
-  color: rgb(145, 123, 76)
-  
+  color: rgb(145, 123, 76);
 }
 
 .button__pause {
-    color: rgb(145, 123, 76);
+  color: rgb(145, 123, 76);
 }
 
 .bar {
-    user-select: none;
-    width: 100%;
-    display: flex;
-    align-items: center;
+  user-select: none;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .bar__time {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: rgba(255, 255, 255, 0.753);
   font-size: 16px;
 }
@@ -115,7 +118,7 @@
 }
 
 .bar__progress__knob {
-  position:relative;
+  position: relative;
   height: 40px;
   width: 15px;
   border: 2px solid rgb(52, 0, 111);
@@ -125,18 +128,18 @@
 }
 
 .mb0 {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 .mb1 {
-    margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .points__container {
-    padding-left: 2rem !important ;
+  padding-left: 2rem !important ;
 }
 
 .points {
- margin: 2rem 0 0 0;
+  margin: 2rem 0 0 0;
 }
 
 .points__label {
@@ -144,7 +147,8 @@
   font-size: 1.75rem;
 }
 
-.ready_button, .finish_button {
+.ready_button,
+.finish_button {
   margin: 0;
   width: 100%;
   text-align: center;
